Fixing potential overflow issue with css.

--- a/src/sgd/frontend/yeastgenome/static/scss/modules/_key-value-display.scss
+++ b/src/sgd/frontend/yeastgenome/static/scss/modules/_key-value-display.scss
@@ -5,6 +5,7 @@ $component-offset-horizontal: 170px !default;
 
 // add .key-value class to <dl> Description list element for inline dt-dl lists
 .key-value {
+    overflow: hidden;
     dt, dd {
         //min-height: 20px; // = line-height ; defined somewhere?
         margin-bottom: 3px;
